welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: ')' expected but 'if' found.
    if (!estFaceMur()) {
    ^SnakeBuggle:19: error: expected class or object definition
def exo() {
^SnakeBuggle:37: error: expected start of definition
override def run() {  exo()
         ^SnakeBuggle:40: error: Unmatched closing brace '}' ignored here
}
^